--- a/starters.html
+++ b/starters.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PizzaSecretss</title>
+    <title>PizzaSecrett</title>
     <link rel="stylesheet" href="style4.css">
 </head>
 
@@ -30,42 +30,41 @@
     </nav>
     <section>
         <h1>STARTERS</h1>
-        <h2>FRENCH FRIES</h2>
-        <h4>Lightly seasoned french fries &nbsp;&nbsp; 10$</h4>
-        <h2>TRUFFLE FRIES</h2>
-        <h4>Topped with delicious truffle<br> sauce & parmean cheese &nbsp;&nbsp; 10$</h4>
-        <h2>CHEESY FRIES</h2>
-        <h4>Topped with cheddar cheese <br>& served with our secret sauce &nbsp;&nbsp; 10$</h4>
-        <h2>POTATO WEDGES</h2>
-        <h4>Served with BBQ sauce &nbsp;&nbsp; 10$</h4>
-        <h2>MOZZARELLA STICKS</h2>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
+        <h2>FRENCH FRIES &nbsp;&nbsp; 10$</h2>
+        <h4>Lightly seasoned french fries</h4>
+        <h2>TRUFFLE FRIES &nbsp;&nbsp; 10$</h2>
+        <h4>Topped with delicious truffle<br> sauce & parmean cheese</h4>
+        <h2>CHEESY FRIES &nbsp;&nbsp; 10$</h2>
+        <h4>Topped with cheddar cheese <br>& served with our secret sauce</h4>
+        <h2>POTATO WEDGES &nbsp;&nbsp; 10$</h2>
+        <h4>Served with BBQ sauce</h4>
+        <h2>MOZZARELLA STICKS &nbsp;&nbsp; 10$</h2>
+        <h4>5 pieces, served with salsa<br> picante</h4>
     </section>
     <section>
         <h1>EXTRA TOPPINGS</h1>
-        <h4>Lightly seasoned french fries &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with delicious truffle<br> sauce & parmean cheese &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with cheddar cheese <br>& served with our secret sauce &nbsp;&nbsp; 10$</h4>
-        <h4>Served with BBQ sauce &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
+        <h4>Extra Mozzarella 1$</h4>
+        <h4>Extra Cheddar 1$</h4>
+        <h4>Extra emmantal 1$</h4>
+        <h4>Extra parmesan 1$</h4>
+        <h4>Extra mushroom 1$</h4>
+        <h4>Extra cherry tomatoes 1$</h4>
+        <h4>Extra sweet corn 1$</h4>
+        <h4>Extra shrimps 3$</h4>
+        <h4>Extra soujok 1$</h4>
+        <h4>Extra truffle 3$</h4>
+        <h4>Extra pepperoni 1$</h4>
+        <h4>Extra chicken 1$</h4>
     </section>
     <section>
         <h1>DRINKS</h1>
-        <h4>Lightly seasoned french fries &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with delicious truffle<br> sauce & parmean cheese &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with cheddar cheese <br>& served with our secret sauce &nbsp;&nbsp; 10$</h4>
-        <h4>Served with BBQ sauce &nbsp;&nbsp; 10$</h4>
-        <h4>5 pieces, served with salsa<br> picante &nbsp;&nbsp; 10$</h4>
+        <h4>Ice tea peach 1.25$</h4>
+        <h4>Ice tea lemon 1.25$</h4>
+        <h4>Water 0.5$</h4>
+        <h4>Soft drinks 1$</h4>
         <h1>DIPS</h1>
-        <h4>Lightly seasoned french fries &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with delicious truffle<br> sauce & parmean  &nbsp;&nbsp; 10$</h4>
-        <h4>Topped with cheddar cheese <br>& served with our secret sauce &nbsp;&nbsp; 10$</h4>
-        <h4>Served with BBQ sauce &nbsp;&nbsp; 10$</h4>
+        <h4>Secret sauce 1$</h4>
+        <h4>Salsa 1$</h4>
     </section>
     <footer>
         <ul>
